@@ -1,6 +1,12 @@
 2009-12-24  Andoni Morales Alastruey  <amorales@flumotion.com>
 
 	* flumotion/component/consumers/applestreamer/resources.py:
+	Get the number of active clients from the stats
+	Add missing 'socket' import
+
+2009-12-24  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	* flumotion/component/consumers/applestreamer/resources.py:
 	Fix getMaxAllowedClients() and add log category
 
 2009-12-23  Andoni Morales Alastruey  <amorales@flumotion.com>
